# faq-chatbot

./: .gitignore  README.md  pyproject.toml
chatbot/app/: main.py
chatbot/app/core/: settings.py
chatbot/app/routers/: faq_collections.py  faq_query.py
chatbot/app/schemas/: faq_collection.py
chatbot/db/vectorstore/: milvus.py
chatbot/embeddings/: __init__.py  embedding_models.py
scripts/: scrap_python_faq.py
