[project]
name = "faq-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.12",
    "flagembedding>=1.3.5",
    "html5lib>=1.1",
    "numpy>=2.2.6",
    "pydantic-settings>=2.9.1",
    "pymilvus>=2.5.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "setuptools>=80.9.0",
]
